--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/Modules)
 # Options
 option(BUILD_SHARED_LIBS "Build libhiprand.so" ON)
 option(BUILD_TEST "Build tests (requires googletest)" ON)
+option(BUILD_CRUSH_TEST "Build Crush tests (requires testu01" ON)
 option(BUILD_BENCHMARK "Build benchmarks" ON)
 
 # Include cmake scripts
@@ -32,6 +33,11 @@ add_subdirectory(library)
 if (BUILD_TEST)
     enable_testing()
     add_subdirectory(test)
+endif()
+
+# Crush Tests
+if (BUILD_CRUSH_TEST)
+    add_subdirectory(crush_test)
 endif()
 
 # Benchmarks
