Fixed cmake scripts for TestU01

--- a/crush_test/CMakeLists.txt
+++ b/crush_test/CMakeLists.txt
@@ -9,17 +9,16 @@ set_source_files_properties(${rocRAND_CRUSH_TEST_SRCS} PROPERTIES HIP_SOURCE_PRO
 include_directories(${PROJECT_SOURCE_DIR}/library/include)
 include_directories(${PROJECT_SOURCE_DIR}/library/src)
 include_directories(${PROJECT_SOURCE_DIR}/crush_test)
-include_directories(SYSTEM ${TESTU01_INCLUDE_DIRS})
+include_directories(${TESTU01_INCLUDE_DIRS})
 foreach(crush_test_src ${rocRAND_CRUSH_TEST_SRCS})
     get_filename_component(crush_test_name ${crush_test_src} NAME_WE)
     hip_add_executable(${crush_test_name} "${crush_test_src}")
     add_dependencies(${crush_test_name} rocRAND)
-    get_target_property(gtest_rpath gtest BINARY_DIR)
     get_target_property(rocRAND_rpath rocRAND BINARY_DIR)
     target_link_libraries(
         ${crush_test_name}
-        -Wl,-rpath,${gtest_rpath}:${rocRAND_rpath} # workaround for HIP linker
-        $<TARGET_FILE:rocRAND> ${TestU01} ${ProbDist} ${MyLib})
+        -Wl,-rpath,${TESTU01_LIBRARY_DIRS}:${rocRAND_rpath} # workaround for HIP linker
+        $<TARGET_FILE:rocRAND> ${testu01} ${probdist} ${mylib})
     set_target_properties(
         ${crush_test_name}
         PROPERTIES
