--- a/crush_test/CMakeLists.txt
+++ b/crush_test/CMakeLists.txt
@@ -6,6 +6,7 @@ set(rocRAND_CRUSH_TEST_SRCS ${tmp})
 set_source_files_properties(${rocRAND_CRUSH_TEST_SRCS} PROPERTIES HIP_SOURCE_PROPERTY_FORMAT TRUE)
 
 # Build
+include_directories(SYSTEM ${Boost_INCLUDE_DIRS}) # Boost
 include_directories(${PROJECT_SOURCE_DIR}/library/include)
 include_directories(${PROJECT_SOURCE_DIR}/library/src)
 include_directories(${PROJECT_SOURCE_DIR}/crush_test)
@@ -18,7 +19,9 @@ foreach(crush_test_src ${rocRAND_CRUSH_TEST_SRCS})
     target_link_libraries(
         ${crush_test_name}
         -Wl,-rpath,${TESTU01_LIBRARY_DIRS}:${rocRAND_rpath} # workaround for HIP linker
-        $<TARGET_FILE:rocRAND> ${testu01} ${probdist} ${mylib})
+        $<TARGET_FILE:rocRAND> ${testu01} ${probdist} ${mylib}
+        ${Boost_LIBRARIES} # Boost program_options
+    )
     set_target_properties(
         ${crush_test_name}
         PROPERTIES
