--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,8 @@ list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/Modules)
 # Options
 option(BUILD_SHARED_LIBS "Build libhiprand.so" ON)
 option(BUILD_TEST "Build tests (requires googletest)" ON)
-option(BUILD_CRUSH_TEST "Build Crush tests (requires testu01" ON)
-option(BUILD_BENCHMARK "Build benchmarks" ON)
+option(BUILD_CRUSH_TEST "Build Crush tests (requires testu01)" OFF)
+option(BUILD_BENCHMARK "Build benchmarks" OFF)
 
 # Include cmake scripts
 include(cmake/Summary.cmake)
