--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,6 +4,10 @@ option(BUILD_CRUSH_TEST "Build Crush tests (requires testu01)" OFF)
 # Get sources
 file(GLOB tmp ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 set(rocRAND_TEST_SRCS ${tmp})
+file(GLOB tmp ${CMAKE_CURRENT_SOURCE_DIR}/test_hiprand*.cpp)
+foreach(EXCLUDE ${tmp})
+    list(REMOVE_ITEM rocRAND_TEST_SRCS "${EXCLUDE}")
+endforeach()
 set_source_files_properties(${rocRAND_TEST_SRCS} PROPERTIES HIP_SOURCE_PROPERTY_FORMAT TRUE)
 
 # Build
@@ -35,3 +39,40 @@ if (BUILD_CRUSH_TEST)
     find_package(Boost 1.54 REQUIRED COMPONENTS ${CRUSH_TEST_BOOST_COMPONENTS})
     add_subdirectory(crush)
 endif()
+
+# hipRand Tests
+file(GLOB tmp ${CMAKE_CURRENT_SOURCE_DIR}/test_hiprand*.cpp)
+set(hipRAND_TEST_SRCS ${tmp})
+set_source_files_properties(${hipRAND_TEST_SRCS} PROPERTIES HIP_SOURCE_PROPERTY_FORMAT TRUE)
+
+foreach(test_src ${hipRAND_TEST_SRCS})
+    get_filename_component(test_name ${test_src} NAME_WE)
+    hip_add_executable(${test_name} "${test_src}")
+    if(HIP_PLATFORM STREQUAL "hcc")
+        add_dependencies(${test_name} rocRAND)
+    endif()
+    add_dependencies(${test_name} hipRAND gtest gtest_main)
+    get_target_property(gtest_rpath gtest BINARY_DIR)
+    get_target_property(hipRAND_rpath hipRAND BINARY_DIR)
+    if(HIP_PLATFORM STREQUAL "hcc")
+        get_target_property(rocRAND_rpath rocRAND BINARY_DIR)
+        target_link_libraries(
+            ${test_name}
+            -Wl,-rpath,${gtest_rpath}:${hipRAND_rpath}:${rocRAND_rpath} # workaround for HIP linker
+            $<TARGET_FILE:hipRAND> $<TARGET_FILE:rocRAND>
+            $<TARGET_FILE:gtest> $<TARGET_FILE:gtest_main>
+        )
+    else()
+        target_link_libraries(
+            ${test_name}
+            "-lcurand" hipRAND
+            gtest gtest_main
+        )
+    endif()
+    set_target_properties(
+        ${test_name}
+        PROPERTIES
+        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/test"
+    )
+    add_test(NAME ${test_name} COMMAND $<TARGET_FILE:${test_name}>)
+endforeach()
