Added sobol tool

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,1 +1,2 @@
 add_executable(xorwow_precomputed_generator xorwow_precomputed_generator.cpp)
+add_executable(sobol_direction_vector_generator sobol_direction_vector_generator.cpp)
