--- a/test/crush/CMakeLists.txt
+++ b/test/crush/CMakeLists.txt
@@ -14,7 +14,7 @@ include_directories(SYSTEM ${Boost_INCLUDE_DIRS}) # Boost
 include_directories(${PROJECT_SOURCE_DIR}/library/include)
 include_directories(${PROJECT_SOURCE_DIR}/library/src)
 include_directories(${PROJECT_SOURCE_DIR}/test/crush)
-include_directories(${TESTU01_INCLUDE_DIRS})
+include_directories(${TestU01_SOURCE_DIR}/include)
 
 if(HIP_PLATFORM STREQUAL "nvcc")
     set(HIP_NVCC_FLAGS " ${HIP_NVCC_FLAGS} --expt-extended-lambda")
@@ -23,12 +23,12 @@ endif()
 foreach(crush_test_src ${rocRAND_CRUSH_TEST_SRCS})
     get_filename_component(crush_test_name ${crush_test_src} NAME_WE)
     hip_add_executable(${crush_test_name} "${crush_test_src}")
-    add_dependencies(${crush_test_name} rocRAND)
+    add_dependencies(${crush_test_name} rocRAND TestU01)
     get_target_property(rocRAND_rpath rocRAND BINARY_DIR)
     target_link_libraries(
         ${crush_test_name}
         -Wl,-rpath,${TESTU01_LIBRARY_DIRS}:${rocRAND_rpath} # workaround for HIP linker
-        $<TARGET_FILE:rocRAND> ${testu01} ${probdist} ${mylib}
+        $<TARGET_FILE:rocRAND> TestU01
         ${Boost_LIBRARIES} # Boost program_options
     )
     if(HIP_PLATFORM STREQUAL "nvcc")
