Download and build boost if not present

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,7 +17,7 @@ include_directories(SYSTEM ${googletest_SOURCE_DIR}/googletest/include)
 foreach(test_src ${rocRAND_TEST_SRCS})
     get_filename_component(test_name ${test_src} NAME_WE)
     hip_add_executable(${test_name} "${test_src}")
-    add_dependencies(${test_name} rocRAND gtest gtest_main)
+    add_dependencies(${test_name} rocRAND ${ROCRAND_TEST_DEPENDENCIES})
     get_target_property(gtest_rpath gtest BINARY_DIR)
     get_target_property(rocRAND_rpath rocRAND BINARY_DIR)
     target_link_libraries(
@@ -34,13 +34,6 @@ endforeach()
 
 # Crush Tests
 if(BUILD_CRUSH_TEST)
-    # Download TestU01 library
-    download_project(PROJ                TestU01
-                     GIT_REPOSITORY      https://github.com/JamesHirschorn/TestU01-CMake.git
-                     GIT_TAG             master
-                     UPDATE_DISCONNECTED TRUE
-    )
-    add_subdirectory(${TestU01_SOURCE_DIR} ${TestU01_BINARY_DIR})
     add_subdirectory(crush)
 endif()
 
@@ -55,7 +48,7 @@ foreach(test_src ${hipRAND_TEST_SRCS})
     if(HIP_PLATFORM STREQUAL "hcc")
         add_dependencies(${test_name} rocRAND)
     endif()
-    add_dependencies(${test_name} hipRAND gtest gtest_main)
+    add_dependencies(${test_name} hipRAND ${ROCRAND_TEST_DEPENDENCIES})
     get_target_property(gtest_rpath gtest BINARY_DIR)
     get_target_property(hipRAND_rpath hipRAND BINARY_DIR)
     if(HIP_PLATFORM STREQUAL "hcc")
