--- a/test/crush/CMakeLists.txt
+++ b/test/crush/CMakeLists.txt
@@ -14,7 +14,7 @@ include_directories(SYSTEM ${Boost_INCLUDE_DIR}) # Boost
 include_directories(${PROJECT_SOURCE_DIR}/library/include)
 include_directories(${PROJECT_SOURCE_DIR}/library/src)
 include_directories(${PROJECT_SOURCE_DIR}/test/crush)
-include_directories(SYSTEM ${TestU01_SOURCE_DIR}/include)
+include_directories(SYSTEM ${TestU01_INCLUDE_DIR})
 
 if(HIP_PLATFORM STREQUAL "nvcc")
     set(HIP_NVCC_FLAGS " ${HIP_NVCC_FLAGS} --expt-extended-lambda")
@@ -27,12 +27,13 @@ foreach(crush_test_src ${rocRAND_CRUSH_TEST_SRCS})
     get_target_property(rocRAND_rpath rocRAND BINARY_DIR)
     target_link_libraries(
         ${crush_test_name}
-        -Wl,-rpath,${TESTU01_LIBRARY_DIRS}:${rocRAND_rpath} # workaround for HIP linker
-        $<TARGET_FILE:rocRAND> TestU01
+        -Wl,-rpath,${rocRAND_rpath} # workaround for HIP linker
+        $<TARGET_FILE:rocRAND>
+        ${TestU01_LIBRARIES}
         ${Boost_LIBRARIES} # Boost program_options
     )
     if(HIP_PLATFORM STREQUAL "nvcc")
-        target_link_libraries( ${crush_test_name} "-lcurand")
+        target_link_libraries(${crush_test_name} "-lcurand")
     endif()
     set_target_properties(
         ${crush_test_name}
