Removed boost dependencies

--- a/test/crush/CMakeLists.txt
+++ b/test/crush/CMakeLists.txt
@@ -10,7 +10,6 @@ endif()
 set_source_files_properties(${rocRAND_CRUSH_TEST_SRCS} PROPERTIES HIP_SOURCE_PROPERTY_FORMAT TRUE)
 
 # Build
-include_directories(SYSTEM ${Boost_INCLUDE_DIR}) # Boost
 include_directories(${PROJECT_SOURCE_DIR}/library/include)
 include_directories(${PROJECT_SOURCE_DIR}/library/src)
 include_directories(${PROJECT_SOURCE_DIR}/test/crush)
@@ -26,16 +25,11 @@ foreach(crush_test_src ${rocRAND_CRUSH_TEST_SRCS})
     add_dependencies(${crush_test_name} rocRAND ${ROCRAND_CRUSH_TEST_DEPENDENCIES})
     get_target_property(rocRAND_rpath rocRAND BINARY_DIR)
     set(TestU01_rpath "${TestU01_LIBRARY_DIRS}")
-    set(Boost_rpath "${Boost_LIBRARY_DIRS}")
-    if("${Boost_rpath}" STREQUAL "")
-        set(Boost_rpath "${PROJECT_SOURCE_DIR}/boost/lib")
-    endif()
     target_link_libraries(
         ${crush_test_name}
-        -Wl,-rpath,${rocRAND_rpath}:${TestU01_rpath}:${Boost_rpath} # workaround for HIP linker
+        -Wl,-rpath,${rocRAND_rpath}:${TestU01_rpath} # workaround for HIP linker
         $<TARGET_FILE:rocRAND>
         ${TestU01_LIBRARIES}
-        ${Boost_LIBRARIES} # Boost program_options
     )
     if(HIP_PLATFORM STREQUAL "nvcc")
         target_link_libraries(${crush_test_name} "-lcurand")
