Add install target
This adds install target which installs both hipRAND
and rocRAND libs. Default locations are:/opt/rocm/hiprand
and /opt/rocm/rocrand.

This commit also changes names of the libs:
* libhipRAND.so -> libhiprand.so
* librocRAND.so -> librocrand.so

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,27 @@
 cmake_minimum_required(VERSION 2.8.12 FATAL_ERROR)
 
+set(CMAKE_INSTALL_PREFIX "/opt/rocm" CACHE PATH "Install path prefix, prepended onto install directories")
+
 project(hipRAND CXX C)
+
+# Set a default build type if none was specified
+if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
+  message(STATUS "Setting build type to 'Release' as none was specified.")
+  set(CMAKE_BUILD_TYPE "${Release}" CACHE STRING "Choose the type of build." FORCE)
+  set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "" "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
+endif()
 
 # CMake modules
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/Modules)
 
 # Options
-option(BUILD_SHARED_LIBS "Build libhiprand.so" ON)
+option(BUILD_SHARED_LIBS "Build shared libraries" ON)
 option(BUILD_TEST "Build tests (requires googletest)" ON)
 option(BUILD_BENCHMARK "Build benchmarks" OFF)
+
+# Version
+set(rocrand_version 1.5.0)
+set(hiprand_version 1.5.0)
 
 # Include cmake scripts
 include(cmake/Summary.cmake)
