--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -19,12 +19,12 @@ endif()
 foreach(benchmark_src ${rocRAND_BENCHMARK_SRCS})
     get_filename_component(benchmark_name ${benchmark_src} NAME_WE)
     hip_add_executable(${benchmark_name} "${benchmark_src}")
-    add_dependencies(${benchmark_name} rocRAND ${ROCRAND_BENCHMARK_DEPENDENCIES})
-    get_target_property(rocRAND_rpath rocRAND BINARY_DIR)
+    add_dependencies(${benchmark_name} rocrand ${ROCRAND_BENCHMARK_DEPENDENCIES})
+    get_target_property(rocRAND_rpath rocrand BINARY_DIR)
     target_link_libraries(
         ${benchmark_name}
         -Wl,-rpath,${rocRAND_rpath} # workaround for HIP linker
-        $<TARGET_FILE:rocRAND> # rocRAND
+        $<TARGET_FILE:rocrand> # rocRAND
     )
     if(HIP_PLATFORM STREQUAL "nvcc")
         target_link_libraries( ${benchmark_name} "-lcurand")
