--- a/test/package/CMakeLists.txt
+++ b/test/package/CMakeLists.txt
@@ -38,6 +38,9 @@ foreach(test_src ${hiprand_pkg_TEST_SRCS})
     hip_add_executable(${test_name} "${test_src}")
     if(HIP_PLATFORM STREQUAL "hcc")
         target_link_libraries(${test_name} ${rocrand_LIBRARIES} ${hiprand_LIBRARIES})
+        foreach(amdgpu_target ${AMDGPU_TARGETS})
+            target_link_libraries(${test_name} --amdgpu-target=${amdgpu_target})
+        endforeach()
     else()
         target_link_libraries(${test_name} "-lcurand" ${hiprand_LIBRARIES})
     endif()
