--- a/test/package/CMakeLists.txt
+++ b/test/package/CMakeLists.txt
@@ -6,22 +6,30 @@ project(hiprand_package_test CXX C)
 # Find HIP
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../../cmake/Modules)
 find_package(HIP REQUIRED)
-include_directories(SYSTEM ${HIP_INCLUDE_DIRECTORIES})
+execute_process(
+    COMMAND ${HIP_HIPCONFIG_EXECUTABLE} --cpp_config
+    OUTPUT_VARIABLE HIP_CPP_CONFIG
+    OUTPUT_STRIP_TRAILING_WHITESPACE
+    ERROR_STRIP_TRAILING_WHITESPACE
+)
+string(REPLACE " " ";" HIP_CPP_CONFIG ${HIP_CPP_CONFIG})
 include(${PROJECT_SOURCE_DIR}/../../cmake/HIP.cmake)
 
-# Find rocRAND
-find_package(rocrand REQUIRED CONFIG HINTS ${ROCRAND_DIR} PATHS "/opt/rocm/rocrand")
-include_directories(${rocrand_INCLUDE_DIRS})
+# CUDA
+if(HIP_PLATFORM STREQUAL "nvcc")
+    set(CUDA_USE_STATIC_CUDA_RUNTIME OFF)
+    find_package(CUDA REQUIRED)
+    set(HIP_HIPCC_FLAGS "-std=c++11")
+endif()
 
+# Find rocRAND
+find_package(rocrand REQUIRED CONFIG HINTS ${rocrand_DIR} PATHS "/opt/rocm/rocrand")
 # Find hipRAND
-find_package(hiprand REQUIRED CONFIG HINTS ${HIPRAND_DIR} PATHS "/opt/rocm/hiprand")
-include_directories(${hiprand_INCLUDE_DIRS})
+find_package(hiprand REQUIRED CONFIG HINTS ${hiprand_DIR} PATHS "/opt/rocm/hiprand")
 
 # Get sources
 file(GLOB rocrand_pkg_TEST_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/test_rocrand*.cpp)
-set_source_files_properties(${rocrand_pkg_TEST_SRCS} PROPERTIES HIP_SOURCE_PROPERTY_FORMAT TRUE)
 file(GLOB hiprand_pkg_TEST_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/test_hiprand*.cpp)
-set_source_files_properties(${hiprand_pkg_TEST_SRCS} PROPERTIES HIP_SOURCE_PROPERTY_FORMAT TRUE)
 
 # Enable testing (ctest)
 enable_testing()
@@ -29,20 +37,42 @@ enable_testing()
 # Build
 foreach(test_src ${rocrand_pkg_TEST_SRCS})
     get_filename_component(test_name ${test_src} NAME_WE)
-    hip_add_executable(${test_name} "${test_src}")
-    target_link_libraries(${test_name} ${rocrand_LIBRARIES})
+    add_executable(${test_name} "${test_src}")
+    target_compile_options(${test_name} PRIVATE "${HIP_CPP_CONFIG}")
+    if(HIP_PLATFORM STREQUAL "nvcc")
+        target_link_libraries(${test_name}
+            PRIVATE
+                roc::rocrand
+                ${CUDA_LIBRARIES}
+        )
+    else()
+        target_link_libraries(${test_name}
+            PRIVATE
+                roc::rocrand
+                "-L${HIP_ROOT_DIR}/lib -lhip_hcc -Wl,-rpath,${HIP_ROOT_DIR}/lib"
+        )
+    endif()
     add_test(NAME "${test_name}" COMMAND ${test_name})
 endforeach()
+
 foreach(test_src ${hiprand_pkg_TEST_SRCS})
     get_filename_component(test_name ${test_src} NAME_WE)
-    hip_add_executable(${test_name} "${test_src}")
+    add_executable(${test_name} "${test_src}")
+    target_compile_options(${test_name} PRIVATE "${HIP_CPP_CONFIG}")
     if(HIP_PLATFORM STREQUAL "hcc")
-        target_link_libraries(${test_name} ${rocrand_LIBRARIES} ${hiprand_LIBRARIES})
-        foreach(amdgpu_target ${AMDGPU_TARGETS})
-            target_link_libraries(${test_name} --amdgpu-target=${amdgpu_target})
-        endforeach()
+        target_link_libraries(${test_name}
+            PRIVATE
+                hip::hiprand
+                roc::rocrand
+                "-L${HIP_ROOT_DIR}/lib -lhip_hcc -Wl,-rpath,${HIP_ROOT_DIR}/lib"
+        )
     else()
-        target_link_libraries(${test_name} "-lcurand" ${hiprand_LIBRARIES})
+        target_link_libraries(${test_name}
+            PRIVATE
+                hip::hiprand
+                ${CUDA_curand_LIBRARY}
+                ${CUDA_LIBRARIES}
+        )
     endif()
     add_test(NAME "${test_name}" COMMAND ${test_name})
 endforeach()
